	* Added 'rpm-sign' to the set of installed packages in
	'centos7/install_rivendell_devel.sh'.
	* Added 'rpm-sign' to the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Added 'cifs-utils' to the set of installed packages in
	'centos7/install_rivendell.sh'.
	* Added 'nfs-utils' to the set of installed packages in
	'centos7/install_rivendell.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'rpm-sign' from the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Added 'ssvnc' to the set of installed packages in
	'centos6/install_rivendell.sh'.
	* Added 'ssvnc' to the set of installed packages in
	'centos7/install_rivendell.sh'.
2016-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Enabling Samba' section in
	'docs/rivendell-install-rhel6.xml'.
	* Added an 'Enabling Samba' section in
	'docs/rivendell-install-rhel7.xml'.
2016-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Changed name of the 'FINISHING UP' section to 'FINAL DETAILS'
	in 'centos6/install_rivendel.sh' and 'centos7/install_rivendell.sh'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Added '--server' and '--standalone' installation modes in
	'centos6/install_rivendell.sh'.
	* Split 'common/smb.conf' into separate 'centos6/smb.conf' and
	'centos7/smb.conf' versions.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Disabled generation of PDF documentation in 'docs/Makefile.am'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in 'centos6/install_rivendell.sh' that broke
	installation in '--server' mode.
	* Implemented a '--client' mode in 'centos6/install_rivendell.sh'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed guest account configuration in 'centos7/smb.conf'.
	* Fixed a bug in 'centos7/install_rivendell.sh' that caused NFS
	services to fail to be enabled when installing in '--server' mode.